k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-gitops
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
